Implemented authorization, loan services and tests
