# src/main/java/com/inghubs/loanmanager/exception/ErrorResponse.java
@@ -1,0 +1,12 @@
+package com.inghubs.loanmanager.exception;
+
+import lombok.Builder;
+
+import java.time.LocalDateTime;
+
+@Builder
+public class ErrorResponse {
+
+    private LocalDateTime timestamp;
+    private String message;
+}
